# ai-arena-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: .env.example  requirements-additional.txt  requirements.txt  setup.py
backend/app/: ai_engines.py  chess_logic.py  database.py  go_logic.py  main.py  tictactoe_logic.py  utils.py
frontend/: README.md  index.html  styles.css  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AISelector.tsx  ChessBoard.tsx  ControlPanel.tsx  EloTestControls.tsx  GameDisplay.tsx  GameStats.tsx  GoBoard.tsx  Header.tsx  ModelSelector.tsx  ThinkingProcess.tsx  TicTacToe.tsx
frontend/src/components/dashboard/: Leaderboard.tsx  PerformanceChart.tsx  RecentMatches.tsx  StatsCards.tsx
frontend/src/pages/: GoGame.tsx  Index-backup.tsx  Index-content.tsx  Index.tsx  StatsDashboard.tsx
frontend/src/services/: eloService.ts
scripts/: populate_mock_data.py
